1999-06-28  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* manual/string.texi (Copying and Concatenation): Mention that
	strndup is a GNU extension.

1999-06-28  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* pwd/getpw.c (__getpw): Fix check for error return.

1999-06-25  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>

	* elf/dl-deps.c (_dl_map_object_deps): When looking for the next
	occurence of the aux object start with the current list entry, not
	the new one.  Adjust tail pointer in the unique list.  Explain how
	the meaning of the variables changes.

1999-06-25  Ulrich Drepper  <drepper@cygnus.com>

	* string/bits/string2.h (strnlen): Remove extra prototype.

1999-06-25  Roland McGrath  <roland@baalperazim.frob.com>

	* hurd.h, hurd/hurd/fd.h, hurd/hurd/port.h, hurd/hurd/signal.h,
	hurd/hurd/threadvar.h, hurd/hurd/userlink.h: Instead of
	_EXTERN_INLINE, use a macro specific to each file,
	_HURD_FD_H_EXTERN_INLINE and the like.
	* hurd/Makefile (inline-headers): New variable.
	(routines): Remove hurdinline.  Add $(inlines).
	(inlines): New variable.
	($(inlines:%=$(objpfx)%.c)): New static pattern rule to generate them.
	(generated): Append those here.
	* hurd/hurdinline.c: File removed.

	* sysdeps/generic/glob64.c: Include <stddef.h> for NULL.

	* mach/Versions (libc: GLIBC_2.0): Add __mig_strncpy.

1999-06-24  Ulrich Drepper  <drepper@cygnus.com>

	* misc/tst-efgcvt.c (ecvt_tests): Test 92.0 with ndigits == 16.

1999-06-24  Thorsten Kukuk  <kukuk@suse.de>

	* nscd/grpcache.c: Add "notfound" data to cache, not iov pointer.
	* nscd/pwdcache.c: Likewise.
	* nscd/hstcache.c: Likewise.

1999-06-23  Ulrich Drepper  <drepper@cygnus.com>

	* manual/arith.texi: Document restriction of ndigit parameter of
	ecvt and friends.
	* misc/efgcvt.c: Define NDIGIT_MAX.
	(gcvt): Limit precision in sprintf call to NDIGIT_MAX.
	Do not dynamically allocate the static buffers.  They are small enough.
	* misc/efgcvt_r.c: Define NDIGIT_MAX.