@@ -650,12 +650,12 @@ glob (pattern, flags, errfunc, pglob)
 		    pwbuflen = 1024;
 		  pwtmpbuf = (char *) __alloca (pwbuflen);
 
-		  success = 1;
-		  while (getpwnam_r (name, &pwbuf, pwtmpbuf, pwbuflen, &p) < 0)
+		  while (getpwnam_r (name, &pwbuf, pwtmpbuf, pwbuflen, &p)
+			 != 0)
 		    {
 		      if (errno != ERANGE)
 			{
-			  success = 0;
+			  p = NULL;
 			  break;
 			}
 		      pwbuflen *= 2;
@@ -664,9 +664,8 @@ glob (pattern, flags, errfunc, pglob)
 		    }
 #   else
 		  p = getpwnam (name);
-		  success = p != NULL;
 #   endif
-		  if (success)
+		  if (p != NULL)
 		    home_dir = p->pw_dir;
 		}
 	    }
@@ -735,7 +734,7 @@ glob (pattern, flags, errfunc, pglob)
 	      buflen = 1024;
 	    pwtmpbuf = (char *) __alloca (buflen);
 
-	    while (getpwnam_r (user_name, &pwbuf, pwtmpbuf, buflen, &p) < 0)
+	    while (getpwnam_r (user_name, &pwbuf, pwtmpbuf, buflen, &p) != 0)
 	      {
 		if (errno != ERANGE)
 		  {
