@@ -1,5 +1,5 @@
 /* Implementation of gamma function according to ISO C.
-   Copyright (C) 1997 Free Software Foundation, Inc.
+   Copyright (C) 1997, 1999 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Ulrich Drepper <drepper@cygnus.com>, 1997.
 
@@ -33,11 +33,15 @@ __ieee754_gammaf_r (float x, int *signgamp)
   GET_FLOAT_WORD (hx, x);
 
   if ((hx & 0x7fffffff) == 0)
-    /* Return value for x == 0 is NaN with invalid exception.  */
-    return x / x;
+    {
+      /* Return value for x == 0 is NaN with invalid exception.  */
+      *signgamp = 0;
+      return x / x;
+    }
   if (hx < 0 && (u_int32_t) hx < 0xff800000 && __rintf (x) == x)
     {
       /* Return value for integer x < 0 is NaN with invalid exception.  */
+      *signgamp = 0;
       return (x - x) / (x - x);
     }
 
