@@ -1,3 +1,11 @@
+1999-06-28  Ulrich Drepper  <drepper@cygnus.com>
+
+	* sysdeps/libm-ieee754/e_gamma_r.c: Initialize *signgamp for NaN
+	returns.
+	* sysdeps/libm-ieee754/e_gammaf_r.c: Likewise.
+	* sysdeps/libm-ieee754/e_gammal_r.c: Likewise.
+	Reported by John Reiser <jreiser@BitWagon.com> [PR libc/1185].
+
 1999-06-28  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
 	* manual/string.texi (Copying and Concatenation): Mention that
